# neural-net-from-scratch

./: .gitignore  README.md  pyproject.toml  train.py
reports/: metrics.json
src/nn/: __init__.py  data.py  layers.py  losses.py  network.py
tests/: test_nn.py  test_train_cli.py
