[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nn-from-scratch"
version = "1.0.0"
description = "A feed-forward neural network with backprop, from scratch in pure NumPy, trained on MNIST."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "smafnan", email = "smafnan5@gmail.com" }]
# The network depends only on NumPy. scikit-learn provides datasets + the split;
# matplotlib is for the training-curve figures.
# pandas is used by the OpenML fetcher to load MNIST efficiently; without it the
# loader transparently falls back to the bundled sklearn digits dataset.
dependencies = ["numpy>=1.24", "scikit-learn>=1.3", "matplotlib>=3.7", "pandas>=2.0"]

[project.optional-dependencies]
dev = ["pytest>=7.4"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
